--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ SOF102_Assignment.pdf
 VeganRestaurant/nbproject/private/private.properties
 VeganRestaurant/nbproject/private/private.xml
 VeganRestaurant
+VeganRestaurant/build
