--- a/sqlserver-docker/docker-compose.yml
+++ b/sqlserver-docker/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.9'
+
 services:
   sqlserver:
     build:
@@ -13,11 +14,17 @@ services:
       - "1433:1433"
     volumes:
       - ./init-database.sql:/init-database.sql
+      - init_status:/var
     command: >
       bash -c "
         /opt/mssql/bin/sqlservr & 
         sleep 45 && 
-        sqlcmd -S localhost -U sa -P Songlong123 -i /init-database.sql -b &&
+        if [ ! -f /var/initialized.flag ]; then
+          sqlcmd -S localhost -U sa -P Songlong123 -i /init-database.sql -b &&
+          touch /var/initialized.flag;
+        fi &&
         tail -f /dev/null
       "
 
+volumes:
+  init_status:
