--- a/sqlserver-docker/Dockerfile
+++ b/sqlserver-docker/Dockerfile
@@ -1,12 +1,15 @@
 FROM mcr.microsoft.com/mssql/server:2019-latest
 
 USER root
+
 RUN apt-get update && \
     apt-get install -y curl gnupg apt-transport-https && \
     curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
     curl https://packages.microsoft.com/config/debian/10/prod.list > /etc/apt/sources.list.d/mssql-release.list && \
     apt-get update && \
     ACCEPT_EULA=Y apt-get install -y mssql-tools unixodbc-dev && \
-    ln -sfn /opt/mssql-tools/bin/* /usr/bin/
+    ln -sfn /opt/mssql-tools/bin/* /usr/bin/ && \
+    mkdir -p /var/opt/mssql/init-flag && \
+    chown -R mssql:mssql /var/opt/mssql/init-flag
 
 USER mssql
